--- a/week-3/InClass/B-movies/index.html
+++ b/week-3/InClass/B-movies/index.html
@@ -18,6 +18,21 @@
 <body>
   <div id="main">
     <div class="jumbotron">
+      <h1>Add new movie</h1>
+      <form>
+        <h2>Title</h2>
+        <input id="input-title" type='text'/>
+        <h2>Director</h2>
+        <input id="input-director" type='text'/>
+        <h2>Type</h2>
+        <input id="input-type" type='text'/>
+        <h2>Have you watched it?</h2>
+        <input id="input-watched" type='checkbox'/>
+        <br>
+        <button id="save">SAVE</button>
+      </form>
+    </div>
+    <div class="jumbotron">
       <h1>My movies</h1>
       <div id="all-movies">
         <p class="alert alert-info">Number of movies: <span id="movies-number"></span></p>
@@ -25,5 +40,4 @@
     </div>
     <script src="exercise.js"></script>
 </body>
-
 </html>
